--- a/css/style.css
+++ b/css/style.css
@@ -46,11 +46,17 @@ section {
   grid-row: 1 / 7;
 }
 
-section h1 {
+.headline {
+  grid-column: 1 / 2;
+  grid-row: 4 / 7
+}
+
+.headline h1 {
   font-family: 'Playfair Display', serif;
   font-style: italic;
   font-size: 50px;
-  margin: 10px 0 20px 0;
+  margin: 50px 0 20px 0;
+  z-index: 1;
 }
 
 aside {
