--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
 body {
   background-color: #dadada;
-  margin: 0 auto;
 }
 
 a {
@@ -9,7 +8,6 @@ a {
 
 .full-width {
   width: 100%;
-  height: 325px;
 }
 
 .grid-contain {
@@ -28,7 +26,6 @@ nav {
   grid-row: 1 / 2;
   z-index: 1;
 }
-
 nav h1{
   font-family: 'Playfair Display', serif;
   margin-top: 15px;
@@ -66,4 +63,47 @@ aside {
 
 aside div {
   margin-bottom: 10px;
+}
+
+@media screen and (min-width: 768px) {
+  .grid-contain{
+    grid-template-columns: 2fr 4fr 4fr;
+    width: 740px;
+  }
+  aside {
+    grid-column: 2 / 4;
+    grid-row: 1 / 2;
+  }
+  nav {
+    background-color: rgba(0,0,0,.6);
+    color: #fff;
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+    z-index: 1;
+  }
+
+  .headline {
+    grid-column: 2 / 4;
+    grid: 7 / 9;
+  }
+
+  .headline h1 {
+    font-size: 75px;
+  }
+
+  section {
+    grid-column: 1 / 5;
+    grid-row: 3 / 10;
+  }
+
+  footer {
+    background-color: #ba0c2f;
+    grid-column: 1 / 5;
+    grid-row: 8 / 9;
+    padding: 7px;
+  }
+
+  p footer footer a {
+    float: left;
+  }
 }
